Additions and group assignments in biblio.bib.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -47,6 +47,7 @@
   url       = {https://doi.org/10.1117/1.3265716},
   volume    = {48},
   abstract  = {The development of high-energy lasers has focused attention on the requirement to assess the mechanical strength of optical components made of fused silica or fused quartz (SiO2). The strength of this material is known to be highly dependent on the stressed area and the surface finish, but has not yet been properly characterized in the published literature. Recently, Detrio and collaborators at the University of Dayton Research Institute (UDRI) performed extensive ring-on-ring flexural strength measurements on fused SiO2 specimens ranging in size from 1  to  9  in. in diameter and of widely differing surface qualities. We report on a Weibull statistical analysis of the UDRI data-an analysis based on the procedure outlined in Proc. SPIE 4375, 241 (2001). We demonstrate that (1) a two-parameter Weibull model, including the area-scaling principle, applies; (2) the shape parameter (m10) is essentially independent of the stressed area as well as the surface finish; and (3) the characteristic strength (1-cm2 uniformly stressed area) obeys a linear law, C (in megapascals) 160−2.83× (in parts per million per steradian), where  characterizes the surface/subsurface "damage" of an appropriate set of test specimens. In this light, we evaluate the cumulative failure probability and the failure probability density of polished and superpolished fused SiO2 windows as a function of the biaxial tensile stress, for stressed areas ranging from 0.3  to  100  cm2.},
+  groups    = {Optical Glass},
   journal   = {Optical Engineering},
   keywords  = {bending strength, quartz, reliability, tensile strength, Weibull distribution, Failure analysis, Lithium, Surface finishing, Glasses, Silica, Polishing, Optical engineering, Statistical analysis, Fused quartz, Information operations},
   publisher = {SPIE},
@@ -90,7 +91,7 @@ elements. In addition, after a temperature change the lens takes some time to st
 properties of the nominal lens system change. We review the concepts of the opto-thermal coefficient and of the thermal
 diffusivity, and provide a method for their rapid calculation in lens design software. We also provide tables of these
 coefficients that are needed in a lens tolerancing analysis.},
-  groups       = {Athermalisation},
+  groups       = {Athermalisation, Glass Selection},
   keywords     = {thermal tolerancing, uniform temperature change, opto-thermal coefficient, thermal diffusivity},
   year         = {2013},
 }
@@ -115,7 +116,7 @@ coefficients that are needed in a lens tolerancing analysis.},
   url       = {http://www.opticsexpress.org/abstract.cfm?URI=oe-20-13-13592},
   volume    = {20},
   abstract  = {A method of glass selection for the design of optical systems with reduced chromatic aberration is presented. This method is based on the unification of two previously published methods adding new contributions and using a multi-objective approach. This new method makes it possible to select sets of compatible glasses suitable for the design of super-apochromatic optical systems. As an example, we present the selection of compatible glasses and the effective designs for all-refractive optical systems corrected in five spectral bands, with central wavelengths going from 485 nm to 1600 nm.},
-  groups    = {OpticalDesign, ChromaticCorrection},
+  groups    = {OpticalDesign, ChromaticCorrection, Glass Selection},
   journal   = {Optics Express},
   keywords  = {Geometric optics ; Mathematical methods (general); Lens system design; Optical design and fabrication; Aberration compensation; Chromatic aberrations; Image quality; Lens design; Multispectral imaging; Optical design; Optical systems},
   month     = {Jun},
@@ -156,7 +157,7 @@ and allow the ray tracing optimization to focus mainly on the color correction. 
 for an error function that separates aberrations. Furthermore, we also demonstrate how these ray tracing methods can be applied
 to athermalize an optical system.We are unaware that these simple but effective methods have been already discussed in detail by
 other authors.},
-  groups       = {OpticalDesign, ChromaticCorrection},
+  groups       = {OpticalDesign, ChromaticCorrection, Glass Selection},
   journal      = {International Journal of Optics},
   year         = {2014},
 }
@@ -164,17 +165,17 @@ other authors.},
 @Article{Sasian2017,
   author    = {Jose Sasian and Weichuan Gao and Yufeng Yan},
   title     = {{Method to design apochromat and superachromat objectives}},
-  journal   = {Optical Engineering},
-  year      = {2017},
-  volume    = {56},
+  doi       = {10.1117/1.OE.56.10.105106},
   number    = {10},
   pages     = {1 -- 6},
-  doi       = {10.1117/1.OE.56.10.105106},
   url       = {https://doi.org/10.1117/1.OE.56.10.105106},
+  volume    = {56},
   abstract  = {We present a simple method to design apochromat and superachromat objectives. The chromatic focal shift is used to determine glass combinations that yield three and four crossings in the chromatic focal shift curve. The method can be extended to design superachromats with more than four crossings.},
-  groups    = {OpticalDesign, ChromaticCorrection},
+  groups    = {OpticalDesign, ChromaticCorrection, Glass Selection},
+  journal   = {Optical Engineering},
   keywords  = {achromatic lens, apochromatic lens, superachromat lens, secondary spectrum, tertiary spectrum},
   publisher = {SPIE},
+  year      = {2017},
 }
 
 @InProceedings{Sparrold:14,
@@ -187,7 +188,7 @@ other authors.},
   publisher = {Optical Society of America},
   url       = {http://www.osapublishing.org/abstract.cfm?URI=IODC-2014-ITu2A.6},
   abstract  = {A simple and computationally efficient optimization constraint based on Seidel aberrations is proposed to relax dispersion tolerance sensitivity and provide insight on when lens splitting or melt fitting becomes necessary to achieve high manufacturing yield.},
-  groups    = {OpticalDesign},
+  groups    = {OpticalDesign, Optical Design},
   journal   = {Classical Optics 2014},
   keywords  = {Optical data storage; Aberrations (global); Lens system design; Chromatic aberrations; Lens design; Monochromatic aberrations; Optical design software; Ray tracing; Refractive index},
   year      = {2014},
@@ -213,19 +214,20 @@ other authors.},
 
 @Article{Herzberger1963,
   author    = {Max Herzberger and Nancy R. McClure},
-  journal   = {Appl. Opt.},
   title     = {The Design of Superachromatic Lenses},
-  year      = {1963},
-  month     = {Jun},
+  doi       = {10.1364/AO.2.000553},
   note      = {\href{https://doi.org/10.1364/AO.2.000553}{doi:10.1364/AO.2.000553}},
   number    = {6},
   pages     = {553--560},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-2-6-553},
   volume    = {2},
   abstract  = {The history of achromatic lenses is briefly reviewed. The latest development is the superachromat, which is corrected for four colors. Since the dispersion of glass can be represented by an equation containing four constants, the superachromat is practically corrected for all colors. The application of the superachromatic principle to thick lenses is described and it is shown that a compound lens can be made superachromatic by making each of its separate components superachromatic.},
-  doi       = {10.1364/AO.2.000553},
+  groups    = {Glass Selection},
+  journal   = {Appl. Opt.},
   keywords  = {Chromatic aberrations; Lens arrays; Mirror design; Optical design; Optical systems; Visible light},
+  month     = {Jun},
   publisher = {OSA},
-  url       = {http://ao.osa.org/abstract.cfm?URI=ao-2-6-553},
+  year      = {1963},
 }
 
 @Article{Tamagawa1994,
@@ -256,6 +258,7 @@ other authors.},
   url       = {http://ao.osa.org/abstract.cfm?URI=ao-9-7-1665},
   volume    = {9},
   abstract  = {A method for the choice of glasses for a superachromatic system consisting of four lenses in contact with each other is developed. The apparatus required for the application of the method, namely, a space representation of three optical constants of the glasses, is described, and the method is applied to the special case of the selection of glasses for a three-lens superachromat.},
+  groups    = {Glass Selection},
   journal   = {Appl. Opt.},
   keywords  = {Color; Dispersion; Optical constants},
   month     = {Jul},
@@ -266,36 +269,37 @@ other authors.},
 @Article{Wang2019,
   author    = {Wei Wang and Xing Zhong and Jiang Liu and Xiaoheng Wang},
   title     = {Apochromatic lens design in the short-wave infrared band using the Buchdahl dispersion model},
-  journal   = {Applied Optics},
-  year      = {2019},
-  volume    = {58},
-  number    = {4},
-  month     = {Feb},
-  pages     = {892--903},
-  note      = {\href{10.1364/AO.58.000892}{https://doi.org/10.1364/AO.58.000892}},
   doi       = {10.1364/AO.58.000892},
+  note      = {\href{10.1364/AO.58.000892}{https://doi.org/10.1364/AO.58.000892}},
+  number    = {4},
+  pages     = {892--903},
   url       = {http://ao.osa.org/abstract.cfm?URI=ao-58-4-892},
+  volume    = {58},
   abstract  = {Chromatic aberration is an important artifact that influences image quality. Thus, it should be optimized during lens design. However, the typical combination and selection method of glass materials for the visible band can hardly satisfy the apochromatic requirements of short-wave infrared (SWIR) lenses. Therefore, we propose a method of glass selection for apochromatic lens design in the SWIR band through vector operation based on the Buchdahl model and third-order aberration theory. The proposed method overcomes limitations of traditional methods and unstable calculation results of special material properties. A design example is presented, which indicates that the proposed method can correct the secondary spectrum in the SWIR band and simplify the design using ordinary mass-produced glasses.},
   comment   = {This article is especially interesting for glass selection purposes.},
-  groups    = {OpticalDesign, ChromaticCorrection},
+  groups    = {OpticalDesign, ChromaticCorrection, Glass Selection},
+  journal   = {Applied Optics},
   keywords  = {Geometric optics; Image metrics; Lens design; Optical design software; Optical systems; Refractive index},
+  month     = {Feb},
   publisher = {OSA},
+  year      = {2019},
 }
 
 @InProceedings{Rayces2000,
   author       = {Juan L. Rayces and Martha Rosete-Aguilar},
   booktitle    = {Current Developments in Lens Design and Optical Systems Engineering},
   title        = {{Selection of glasses for achromatic doublets with reduced secondary color}},
-  year         = {2000},
+  doi          = {10.1117/12.405220},
   editor       = {Robert E. Fischer and Warren J. Smith and Robert E. Fischer and R. Barry Johnson and Warren J. Smith and William H. Swantner},
   note         = {\href{https://doi.org/10.1117/12.405220}{doi:0.1117/12.405220}},
   organization = {International Society for Optics and Photonics},
   pages        = {36 -- 46},
   publisher    = {SPIE},
+  url          = {https://doi.org/10.1117/12.405220},
   volume       = {4093},
   abstract     = {Graphical methods have been used in Engineering and Physics to speed up long numerical calculations often done by hand. Many of these methods have become obsolete with the increasing speed of digital computers. Charts for the selection of glasses for thin achromatic doublets with reduced secondary spectrum are among the graphs still in use probably because of the sizable number of possible combinations. With any of the most popular, present day, PC's all the possible combinations of all the glasses in the Schott Glass Catalog, taken a pair of glasses at a time secondary spectrum can be computed, sorted in increasing value and displayed on the monitor screen as a table in about 30 seconds. The number of acceptable solutions on the bases of magnitude of secondary spectrum only may still be huge. Further calculations of aberrations for specific cases will help reduce drastically the number of acceptable solutions. Beyond that, it will be left to the user to consider other parameters generally listed in glass catalogs data sheets to finally come out with one solution.},
-  doi          = {10.1117/12.405220},
-  url          = {https://doi.org/10.1117/12.405220},
+  groups       = {Glass Selection},
+  year         = {2000},
 }
 
 @Article{Lim2016,
@@ -308,7 +312,7 @@ other authors.},
   url       = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-16-18049},
   volume    = {24},
   abstract  = {We propose a new graphical method for selecting a pair of optical and housing materials to simultaneously achromatize and athermalize a multilens system. To obtain the material combination using an athermal glass map, the material suitable for housing is graphically selected, and then the powers of elements constituting an equivalent single lens are redistributed. Although a material combination does not exist, we can continuously change the power of each element. Thus, we can reasonably identify a pair of optical and housing materials that simultaneously satisfies achromatic and athermal conditions. By applying this method to design a Tessar lens, the chromatic and thermal defocuses are reduced to less than the depth of focus, over the specified waveband and temperature ranges.},
-  groups    = {Athermalisation},
+  groups    = {Athermalisation, Glass Selection},
   journal   = {Opt. Express},
   keywords  = {Geometric optical design; Optical design of instruments; Lens system design; Image quality; Lens design; Modulation transfer function; Optical devices; Optical materials; Refractive index},
   month     = {Aug},
@@ -324,7 +328,7 @@ other authors.},
   pages     = {457--463},
   url       = {https://doi.org/10.1007/BF00682543},
   volume    = {50},
-  groups    = {Optical Glass},
+  groups    = {Optical Glass, Glass Selection},
   journal   = {Glass and ceramics},
   publisher = {Springer},
   year      = {1993},
@@ -360,6 +364,7 @@ solutions generating a Pareto front. Our method resulted in alternative and
 useful insights about the trade-off solutions for a lens design problem. The
 efficiency of the proposed method is verified through examples, showing
 excellent results for both simple systems and real-world problems.},
+  groups      = {Optical Design},
   school      = {Instituto Nacional de Pesquisas Espaciais-INPE},
   year        = {2014},
 }
@@ -377,6 +382,7 @@ excellent results for both simple systems and real-world problems.},
   abstract  = {For more than 400 years, optical glass has provided mankind with a window into both the hidden microcosm and vast outer cosmos of the known universe, transforming philosophy, science, and engineering through its visage and, thus, shaping modern civilization. Its high transmittance, homogeneity, and precisely defined light refraction properties are the preconditions for highly resolved true-color imaging, making it an intrinsic component of technology in general. From consumer products, such as cameras and binoculars, to microscopes and telescopes—the most essential tools of research in many fields—the role of optical glass is integral to the very foundations of modern science and industry.
 
 In contrast to its fundamental importance, there is often a lack of knowledge regarding the properties of optical glass by engineers and designers, causing misunderstandings in purchasing and fabrication, and ultimately limiting the potential and application of this dynamic material. This book will serve as an invaluable resource of technical information, including the index of refraction and its dependence on wavelength (dispersion), optical homogeneity and transmittance (presented together with restrictions imposed by the manufacturing processes and chemical resistance), as well as mechanical, thermal, and environmental properties. Measurement methods with their achievable accuracy are given, along with a wide scope of overview diagrams illustrating properties and main uses, as well as diagrams ranking optical glass types with respect to their properties. The wide scope and lucid organization of this volume will prove to be highly valuable across a wide range of design, engineering, and purchasing applications within the many fields dependent on this incredible material.},
+  groups    = {Optical Glass},
   lccn      = {2014942744},
   year      = {2014},
 }
@@ -403,21 +409,22 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
 
 @Article{Guo2019,
   author       = {Dabo Guo and Liang Yin and Guang Yuan},
-  journal      = {Opt. Express},
+  date         = {2019},
+  journaltitle = {Optics Express},
   title        = {New automatic optical design method based on combination of particle swarm optimization and least squares},
-  year         = {2019},
-  month        = {Jun},
+  doi          = {10.1364/OE.27.017027},
   note         = {\href{https://doi.org/10.1364/OE.27.017027}{doi:10.1364/OE.27.017027}},
   number       = {12},
   pages        = {17027--17040},
+  url          = {http://www.opticsexpress.org/abstract.cfm?URI=oe-27-12-17027},
   volume       = {27},
   abstract     = {Damped least square method is one of the popular methods for automatic lens design. Various improvements in this automatic optical design are mainly due to the optimization of the damping factor and the weight factor. Especially in the four stages of lens design, designers pay more attention to the \&\#x201C;correction\&\#x201D; stage, and recognized the importance of human experience in \&\#x201C;correction\&\#x201D;. The introduction of computer brought the feeling of indescribable about the balance aberration of computer. In fact, the function of computer has not gone beyond the range of balance aberration. In this paper, we discussed how to make the whole process of lens design completely automatic by computer, including the selection, correction and evaluation of the system. To achieve this process, the key step is how to make the computer think like a designer and select the type of lens. The success of lens design depends largely on the type selection. Designers who have a profound understanding of optical design theory and rich practical experience can select the simplest and most suitable one from a wide range of types, therefore, this method can also express a new global search method for optical design. Least squares is added to Particle Swarm Optimization (PSO) algorithm to optimize glass selection in optical system. After comparing and analysing the optimized design solutions, the system performance is well achieved. This method can be conveniently implemented and expands the solution space of the optical system.},
-  date         = {2019},
-  doi          = {10.1364/OE.27.017027},
-  journaltitle = {Optics Express},
+  groups       = {Optical Design},
+  journal      = {Opt. Express},
   keywords     = {Automatic lens design; Genetic algorithms; Lens design; Optical design; Optical systems; Ray tracing},
+  month        = {Jun},
   publisher    = {OSA},
-  url          = {http://www.opticsexpress.org/abstract.cfm?URI=oe-27-12-17027},
+  year         = {2019},
 }
 
 @Book{Gross2007,
@@ -430,6 +437,7 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   publisher = {Wiley},
   series    = {Handbook of Optical Systems},
   url       = {https://books.google.co.za/books?id=G8AWAQAAMAAJ},
+  groups    = {Optical Design},
   lccn      = {94032692},
   year      = {2007},
 }
@@ -444,6 +452,7 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   series    = {2053-2563},
   url       = {http://dx.doi.org/10.1088/978-0-7503-1611-8},
   abstract  = {Lens Design: Automatic and Quasi-Autonomous Computational Methods and Techniques is the first book that interactively describes the newest modern lens design tools.  Detailing design methods for a variety of lens forms, this book shows that fixed focus and zoom lenses can be optimized, starting from plane-parallel surfaces, in a brief time on a modern fast PC compared to traditional tools that require many days or weeks of tedious work. Loaded with tips and ideas resulting from over 50 years of experience, the reader will improve their lens design skill.  Experienced and aspiring lens designers who master the power of the tools, methods, and principles taught in this book will be able to develop excellent designs now and in the future. Part of Series in Emerging Technologies in Optics and Photonics},
+  groups    = {Optical Design},
   year      = {2018},
 }
 
@@ -465,18 +474,65 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
 
 @Article{Jamieson1981,
   author    = {Thomas H. Jamieson},
-  journal   = {Optical Engineering},
   title     = {{Thermal Effects In Optical Systems}},
-  year      = {1981},
+  doi       = {10.1117/12.7972683},
   note      = {\href{https://doi.org/10.1117/12.7972683}{doi:10.1117/12.7972683}},
   number    = {2},
   pages     = {156 -- 160},
+  url       = {https://doi.org/10.1117/12.7972683},
   volume    = {20},
   abstract  = {Optical systems often have to operate over a wide temperature range. The effects of temperature changes on the performance of some typical optical systems are described in this paper. Methods used to counteract such variations in optical properties range from servo-controlled motion of the components and bimetal mounts with reciprocating motions to, as this paper describes, a simple choice of appropriate optical and mount materials. The optical systems considered range from single lenses to high quality multielement imaging systems.},
-  doi       = {10.1117/12.7972683},
+  groups    = {Optical Design},
+  journal   = {Optical Engineering},
   keywords  = {Thermal effects, Temperature metrology, Imaging systems, Lenses, Optical properties},
   publisher = {SPIE},
-  url       = {https://doi.org/10.1117/12.7972683},
+  year      = {1981},
+}
+
+@Patent{Mercado1993color,
+  author    = {Mercado, Romeo I and Robb, Paul N},
+  date      = {1993},
+  number    = {US 5,210,646A},
+  title     = {Color-corrected optical systems and method of selecting optical materials therefor},
+  holder    = {Lockheed Martin Corp.},
+  note      = {\href{https://patents.google.com/patent/US5210646A/en}{Google Patents}, Accessed 2020-08-07},
+  url       = {https://patents.google.com/patent/US5210646A/en},
+  urldate   = {2020-08-07},
+  abstract  = {A method is described for selecting optical materials to use in designing color-corrected optical systems. Various dioptric, catadioptric and anamorphic optical systems are described, which use only two different types of optical materials to obtain precise axial color correction at three, four or five wavelengths (depending upon the particular optical materials), with only very small chromatic aberration occurring at wavelengths between the precisely color-corrected wavelengths. Examples of color-corrected lens systems comprising more than two glasses are also described.},
+  groups    = {Glass Selection},
+  month     = may #{~11},
+  publisher = {Google Patents},
+  year      = {1993},
+}
+
+@Book{Yoder2008,
+  author    = {Yoder, P.R.},
+  date      = {2008},
+  title     = {Mounting Optics in Optical Instruments},
+  isbn      = {9780819471291},
+  publisher = {SPIE},
+  series    = {SPIE Press monograph},
+  url       = {https://books.google.co.za/books?id=7h34rbhspdQC},
+  lccn      = {2008019334},
+  year      = {2008},
+}
+
+@InProceedings{Fischer2004,
+  author       = {Robert E. Fischer and Alastair J. Grant and Ulrich Fotheringham and Peter Hartmann and Steffen Reichel},
+  booktitle    = {Novel Optical Systems Design and Optimization VII},
+  title        = {{Removing the mystique of glass selection}},
+  doi          = {10.1117/12.562914},
+  editor       = {Jose M. Sasian and R. John Koshel and Paul K. Manhart and Richard C. Juergens},
+  note         = {\href{https://doi.org/10.1117/12.562914}{doi:10.1117/12.562914}},
+  organization = {International Society for Optics and Photonics},
+  pages        = {134 -- 146},
+  publisher    = {SPIE},
+  url          = {https://doi.org/10.1117/12.562914},
+  volume       = {5524},
+  abstract     = {Glass selection tends to be both a science and an art.  It is the intent of this paper to remove the "mystique" surrounding glass selection, primarily based on the chromatic properties of the glass, and to show via careful parametric analyses how we can optimally select glasses for lenses of different f/numbers, spectral bands, and performance requirements.  The important roles of refractive index and Abbe number as well as partial dispersion will be considered. Using the SCHOTT glass map, six separate and identifiable regions along with glasses within each region will be discussed.  The goal for this paper is to make glass selection easier to understand.},
+  groups       = {Glass Selection},
+  keywords     = {glass, optical design, dispersion, glass selection, chromatic aberration},
+  year         = {2004},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
@@ -485,11 +541,13 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
 0 AllEntriesGroup:;
 1 StaticGroup:Computational Imaging\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Phase Encoding\;0\;0\;0x8a8a8aff\;\;\;;
-1 StaticGroup:Optical Glass\;0\;0\;0x8a8a8aff\;\;Technical bulletins, papers and books relating to optical quality glass and other optical materials\;;
+1 StaticGroup:Optical Glass\;0\;1\;0x8a8a8aff\;\;Technical bulletins, papers and books relating to optical quality glass and other optical materials\;;
 1 StaticGroup:Catoptric Telescopes\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Tri-Mirror Systems\;0\;1\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Aspheric Optics\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Freeform Optics\;0\;1\;0x8a8a8aff\;\;\;;
 2 StaticGroup:Aspheric Lenses\;0\;0\;0x8a8a8aff\;\;\;;
 1 StaticGroup:Athermalisation\;0\;0\;0x8a8a8aff\;\;\;;
+1 StaticGroup:Optical Design\;0\;1\;0x8a8a8aff\;\;\;;
+2 StaticGroup:Glass Selection\;0\;1\;0x8a8a8aff\;\;Methods of glass selection for achromatisation and/or athermalisation of optical systems\;;
 }
