Bib addition Rayces2001.

--- a/Notebooks/biblio.bib
+++ b/Notebooks/biblio.bib
@@ -535,6 +535,23 @@ In contrast to its fundamental importance, there is often a lack of knowledge re
   year         = {2004},
 }
 
+@Article{Rayces2001,
+  author    = {Juan L. Rayces and Martha Rosete-Aguilar},
+  journal   = {Appl. Opt.},
+  title     = {Selection of glasses for achromatic doublets with reduced secondary spectrum. I. Tolerance conditions for secondary spectrum, spherochromatism, and fifth-order spherical aberration},
+  year      = {2001},
+  month     = {Nov},
+  note      = {\href{https://doi.org/10.1364/AO.40.005663}{doi:10.1364/AO.40.005663}},
+  number    = {31},
+  pages     = {5663--5676},
+  volume    = {40},
+  abstract  = {We describe a way of selecting pairs of glasses for both thincemented achromatic doublets and thin aplanatic achromatic doubletswith a reduced secondary spectrum. By taking one pair of glasses ata time, we can compute and display the secondary spectrum in increasingvalue. The number of solutions based on the magnitude of thesecondary spectrum alone is huge: 40,804 pairs. Some tests areapplied at different stages of the design procedure to reduce thenumber of acceptable solutions. Aberrations that cannot becorrected, namely, spherochromatism and fifth-order sphericalaberration, are further calculated to reduce drastically the number ofacceptable solutions. To do this, we establish tolerance conditionsbased on the relationship between the Strehl intensity ratio and therms wave-aberration error so that the rms wave error is minimized inthe presence of the secondary spectrum, spherochromatism, and thefifth-order spherical aberration.},
+  doi       = {10.1364/AO.40.005663},
+  keywords  = {Geometric optical design; Aberrations (global); Aberration correction; Lens design; Monochromatic aberrations; Near ultraviolet; Optical systems; Spherical aberrations},
+  publisher = {OSA},
+  url       = {http://ao.osa.org/abstract.cfm?URI=ao-40-31-5663},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
